# TV3MarathonGame

./: CMakeLists.txt  README.md
Source/: CMakeLists.txt  Main.cpp  resource.h  resource.rc
Source/AIControllers/: IAIController.h
Source/AIControllers/AlucinacionSphereChase/: AlucinacionSphereChase.cpp  AlucinacionSphereChase.h
Source/AIControllers/ChaseController/: ChaseController.cpp  ChaseController.h
Source/AIControllers/DopaminaBrain4Controller/: DopaminaBrain4Controller.cpp  DopaminaBrain4Controller.h
Source/AIControllers/ExpenderController/: ExpenderController.cpp  ExpenderController.h
Source/AIControllers/Follower/: Follower.cpp  Follower.h
Source/AIControllers/PowerUpController/: PowerUpController.cpp  PowerUpController.h
Source/AIControllers/SphereRandomWalkController/: SphereRandomWalkController.cpp  SphereRandomWalkController.h
Source/AIControllers/TwisterChase/: TwisterChase.cpp  TwisterChase.h
Source/AIControllers/ValveController/: ValveController.cpp  ValveController.h
Source/AnimationControllers/: IAnimationController.h
Source/AnimationControllers/ROA/: ROAObject.cpp  ROAObject.h
Source/AnimationControllers/YAxisRotation/: YAxisRotation.cpp  YAxisRotation.h
Source/Camera/: Camera3D.cpp  Camera3D.h  CameraOrtho.cpp  CameraOrtho.h  ICamera.cpp  ICamera.h
Source/CameraControllers/: ICameraController.h
Source/CameraControllers/ROA/: ROACamera.cpp  ROACamera.h
Source/CameraControllers/SSPlayer/: SSPlayerCameraController.cpp  SSPlayerCameraController.h
Source/Controllers/: ROA.cpp  ROA.h  ROAResource.cpp  ROAResource.h  SphericalController.cpp  SphericalController.h
Source/Directx/: DirectInput.cpp  DirectInput.h  DirectXInput.h  Directx.cpp  Directx.h
Source/Factories/: CollisionShapeFactory.cpp  CollisionShapeFactory.h  EffectFactory.cpp  EffectFactory.h  MeshFactory.cpp  MeshFactory.h  ParticleFactory.cpp  ParticleFactory.h  QuadFactory.cpp  QuadFactory.h  TextureFactory.cpp  TextureFactory.h
Source/Game/: Game.cpp  Game.h  GameOptions.cpp  GameOptions.h
Source/GameState/: EmptyState.cpp  EmptyState.h  IGameState.cpp  IGameState.h  ParticleState.cpp  ParticleState.h  TestControllerState.cpp  TestControllerState.h  TestState.cpp  TestState.h
Source/GameState/Common/: DinamicHelp.cpp  DinamicHelp.h  Pause.cpp  Pause.h
Source/GameState/Game/: FinalCreditsState.cpp  FinalCreditsState.h  FinalScoresState.cpp  FinalScoresState.h  GameOverState.cpp  GameOverState.h  IllnessState.cpp  IllnessState.h  InstructionsState.cpp  InstructionsState.h  SaveScoreState.cpp  SaveScoreState.h  ScoreRecountState.cpp  ScoreRecountState.h
Source/GameState/Menu/: CreditsState.cpp  CreditsState.h  LogosState.cpp  LogosState.h  MenuState.cpp  MenuState.h  OptionsState.cpp  OptionsState.h  ShowScoresState.cpp  ShowScoresState.h
Source/Global/: Geometry.cpp  Geometry.h  Rendering.cpp  Rendering.h  Variables.cpp  Variables.h
Source/IO/: IOStatus.cpp  IOStatus.h
Source/IO/AnalogAction/: AnalogAction.cpp  AnalogAction.h
Source/IO/DigitalAction/: DigitalAction.cpp  DigitalAction.h
Source/Logic/: FirstLevelLogic.cpp  FirstLevelLogic.h  FourthLevelLogic.cpp  FourthLevelLogic.h  Logic.cpp  Logic.h  SecondLevelLogic.cpp  SecondLevelLogic.h  ThirdLevelLogic.cpp  ThirdLevelLogic.h
Source/Lua/: LuaFunctions.cpp  LuaFunctions.h  LuaLogic.cpp  LuaLogic.h  LuaRoutines.cpp  LuaRoutines.h  LuaVM.cpp  LuaVM.h
Source/Managers/: BrainManager.cpp  BrainManager.h  CalAnimCoreModelManager.cpp  CalAnimCoreModelManager.h  CollisionManager.cpp  CollisionManager.h  ControllerManager.cpp  ControllerManager.h  EnemyManager.cpp  EnemyManager.h  PlanetMapManager.cpp  PlanetMapManager.h  ROAResourceManager.cpp  ROAResourceManager.h  SpatialManager.cpp  SpatialManager.h  TriggerManager.cpp  TriggerManager.h
Source/Material/: Material.cpp  Material.h
Source/Mesh/: IMesh.cpp  IMesh.h  MeshTypes.h  VertexTypes.cpp  VertexTypes.h
Source/Object/: Location.cpp  Location.h  Object.cpp  Object.h
Source/Particles/: ActionPSManager.cpp  ActionPSManager.h  CorePSubsystem.cpp  CorePSubsystem.h  DomainGenerator.cpp  DomainGenerator.h  PSManager.cpp  PSManager.h  ParticleGroup.cpp  ParticleGroup.h
Source/PlayerControllers/: IPlayerController.h
Source/SoundPlayer/: SoundPlayer.cpp  SoundPlayer.h
Source/UI/: FirstLevelUI.cpp  FirstLevelUI.h  FourthLevelUI.cpp  FourthLevelUI.h  SecondLevelUI.cpp  SecondLevelUI.h  ThirdLevelUI.cpp  ThirdLevelUI.h
Source/XMLParser/: XMLParser.cpp  XMLParser.h
(+383 files in other folders)
